# iot-sdk-trusted-firmware

./: CMakeLists.txt  README.md
config/: config_default.cmake  set_config.cmake
interface/: CMakeLists.txt
interface/include/: iotex_tf_mbedtls_r.h  tfm_ns_interface.h  tfm_veneers.h
interface/include/psa/: crypto_types.h
interface/src/: iotex_audit_func_api.c  iotex_crypto_func_api.c  iotex_its_func_api.c  iotex_ns_interface.c  iotex_ps_func_api.c
platform/: CMakeLists.txt
secure_fw/: CMakeLists.txt
secure_fw/core/: CMakeLists.txt
secure_fw/core/include/: tfm_memory_utils.h
secure_fw/core/src/: tfm_memory_utils.c
secure_fw/ns_callable/: tfm_veneers.c
secure_fw/services/: CMakeLists.txt
secure_fw/services/audit_logging/: CMakeLists.txt  audit_core.c
secure_fw/services/crypto/: CMakeLists.txt  crypto_aead.c  crypto_alloc.c  crypto_asymmetric.c  crypto_cipher.c  crypto_hash.c  crypto_init.c  crypto_key.c  crypto_key_derivation.c  crypto_key_management.c  crypto_mac.c  crypto_rng.c  tfm_crypto_api.h  tfm_mbedcrypto_include.h
secure_fw/services/internal_trusted_storage/: CMakeLists.txt  tfm_internal_trusted_storage.c  tfm_its_req_mngr.c
secure_fw/services/protected_storage/: CMakeLists.txt  tfm_protected_storage.c  tfm_ps_req_mngr.c
